# EcoTrend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.cmake  todo.md  vcpkg.json
cmake/: vcpkg_toolchain.cmake
doc/: TemplateDesigner.md
resources/assets/: Thumbs.db
resources/report_templates/: config.json  customer_template.json  customer_template_widgets.json  customer_template_widgetsDEPRECATED.json  debug.json  plot_debug.json  sikora_template.json
src/: CMakeLists.txt
src/Core/: App.cpp  App.hpp  EntryPoint.cpp  Window.cpp  Window.hpp  WindowSettings.hpp
src/Data/: PlotData.hpp  StatisticCalculation.cpp  StatisticCalculation.hpp
src/Template/: Report.cpp  Report.hpp  Template.cpp  Template.hpp
src/UI/: ChartType.hpp  Dockspace.cpp  FileManagerLayer.cpp  FileManagerLayer.hpp  Layer.hpp  MainLayer.cpp  MainLayer.hpp  MenuBar.cpp  PlotViewer.cpp  PlotViewer.hpp
src/UI/Canvas/: Canvas.cpp  Canvas.hpp  CanvasImage.hpp  CanvasLayer.cpp  CanvasLayer.hpp
src/UI/Layer/: FileManagerLayer.cpp  Layer.hpp  MenuBar.cpp  PlotViewer.cpp  PlotViewer.hpp  TemplateDesigner.cpp  TemplateDesigner.hpp
src/UI/Popup/: ExportReportPopup.cpp  ExportReportPopup.hpp  InsertJsonDirPopup.cpp  InsertJsonDirPopup.hpp  Popup.hpp  SaveChartPopup.cpp  SaveChartPopup.hpp  SelectChartTypePopup.cpp  SelectChartTypePopup.hpp  SelectDataSourcePopup.cpp  SelectDataSourcePopup.hpp
src/UI/Widget/: Widgets.cpp  Widgets.hpp
src/Utility/: Files.cpp  Files.hpp  JSON_Handler.cpp  JSON_Handler.hpp  JsonHandler.cpp  JsonHandler.hpp  PdfFile.cpp  PdfFile.hpp  PlotExporter.cpp  PlotExporter.hpp
