cmake_minimum_required(VERSION 3.8)

project(Ecotrend CXX C) 

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

include(${CMAKE_SOURCE_DIR}/deps.cmake)

FETCH_GLFW()
CREATE_IMGUI_LIBRARY()
CREATE_GLAD_LIBRARY()
CREATE_IMPLOT_LIBRARY()
FETCH_JSON()
FETCH_MATPLOT()

add_subdirectory(src)



